--- a/settings.gradle
+++ b/settings.gradle
@@ -20,6 +20,12 @@ dependencyResolutionManagement {
 
 rootProject.name = "ALibKit_Airbnb"
 include ':app'
+include ':epoxy3'
+include ':epoxy4'
+include ':epoxy_paging3'
+include ':epoxy_paging4'
+include ':epoxy_paging3_test'
+include ':epoxy_databinding3'
 //SwiftKit
 include ':SwiftKit'
 project(':SwiftKit').projectDir = new File("D:\\WorkSpace\\GitHub\\SwiftKit")
@@ -30,11 +36,5 @@ include ':KUtilKit'
 project(':KUtilKit').projectDir = new File("D:\\WorkSpace\\GitHub\\KUtilKit")
 include ':KUtilKit:utilk_android'
 include ':KUtilKit:utilk_kotlin'
-include ':epoxy_paging3'
-include ':epoxy_paging4'
-include ':epoxy_paging3'
-include ':epoxy_paging3'
-include ':epoxy_paging3_test'
-include ':epoxy3'
-include ':epoxy_databinding3'
-include ':epoxy4'
+
+include ':epoxy3_test'
