--- a/settings.gradle
+++ b/settings.gradle
@@ -37,3 +37,4 @@ include ':KUtilKit'
 project(':KUtilKit').projectDir = new File("D:\\WorkSpace\\GitHub\\KUtilKit")
 include ':KUtilKit:utilk_android'
 include ':KUtilKit:utilk_kotlin'
+include ':lottie'
