--- a/epoxy3/databinding/build.gradle
+++ b/epoxy3/databinding/build.gradle
@@ -1,11 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    //kapt 'kotlin-kapt
 }
 
 android {
-    namespace 'com.mozhimen.libk.airbnb.epoxy4'
+    namespace 'com.mozhimen.libk.airbnb.epoxy.databinding3'
     compileSdk 34
 
     defaultConfig {
@@ -13,7 +12,7 @@ android {
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-//        consumerProguardFiles "consumer-rules.pro"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -32,10 +31,9 @@ android {
 }
 
 dependencies {
-    api "com.airbnb.android:epoxy:4.6.3-vinay-compose"
-//    kapt "com.airbnb.android:epoxy-processor:4.6.3-vinay-compose"
+    api 'com.airbnb.android:epoxy-databinding:3.4.2'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
