--- a/epoxy3/adapter/build.gradle
+++ b/epoxy3/adapter/build.gradle
@@ -4,12 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.mozhimen.libk.airbnb.epoxy.paging4'
+    namespace 'com.mozhimen.libk.airbnb.epoxy3.adapter'
     compileSdk 34
 
     defaultConfig {
         minSdk 19
-        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -18,7 +17,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
@@ -31,9 +30,9 @@ android {
 }
 
 dependencies {
-    api "com.airbnb.android:epoxy-paging:4.6.3-vinay-compose"
+    api 'com.airbnb.android:epoxy-adapter:3.8.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 }
