--- a/epoxy3/paging/build.gradle
+++ b/epoxy3/paging/build.gradle
@@ -4,20 +4,21 @@ plugins {
 }
 
 android {
-    namespace 'com.mozhimen.libk.airbnb.epoxy.databinding3'
+    namespace 'com.mozhimen.libk.airbnb.epoxy.paging3'
     compileSdk 34
 
     defaultConfig {
         minSdk 19
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
+//        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
@@ -30,7 +31,7 @@ android {
 }
 
 dependencies {
-    api 'com.airbnb.android:epoxy-databinding:3.4.2'
+    api "com.airbnb.android:epoxy-paging:3.8.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
