--- a/epoxy3/test/build.gradle
+++ b/epoxy3/test/build.gradle
@@ -37,10 +37,10 @@ android {
 }
 
 dependencies {
-    implementation project(':SwiftKit:bindk')
+    implementation project(':ASwiftKit:bindk')
     implementation project(':epoxy3')
     kapt 'com.airbnb.android:epoxy-processor:3.8.0'
-    implementation project(':epoxy_databinding3')
+    implementation project(':epoxy3:databinding')
     implementation project(':lottie')
 
     implementation  'com.scwang.smart:refresh-layout-kernel:2.0.3'      //core
