--- a/epoxy4/paging/build.gradle
+++ b/epoxy4/paging/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'com.mozhimen.libk.airbnb.epoxy.paging3'
+    namespace 'com.mozhimen.libk.airbnb.epoxy.paging4'
     compileSdk 34
 
     defaultConfig {
@@ -12,13 +12,13 @@ android {
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
+//        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-    api "com.airbnb.android:epoxy-paging:3.8.0"
+    api "com.airbnb.android:epoxy-paging:4.6.3-vinay-compose"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
