--- a/settings.gradle
+++ b/settings.gradle
@@ -20,21 +20,36 @@ dependencyResolutionManagement {
 
 rootProject.name = "ALibKit_Airbnb"
 include ':app'
+include ':lottie'
 include ':epoxy3'
+include ':epoxy3:adapter'
+include ':epoxy3:test'
+include ':epoxy3:databinding'
+include ':epoxy3:paging'
 include ':epoxy4'
-include ':epoxy_paging3'
-include ':epoxy_paging4'
-include ':epoxy_paging3_test'
-include ':epoxy_databinding3'
-include ':epoxy3_test'
-//SwiftKit
-include ':SwiftKit'
-project(':SwiftKit').projectDir = new File("D:\\WorkSpace\\GitHub\\SwiftKit")
-include ':SwiftKit:basick'
-include ':SwiftKit:bindk'
+include ':epoxy4:paging'
+//ALibKit_Google
+include ':ALibKit_Google'
+project(':ALibKit_Google').projectDir = new File("D:\\WorkSpace\\GitHub\\ALibKit_Google")
+include ':ALibKit_Google:material'
+//ALibKit_Jetbrains
+include ':ALibKit_Jetbrains'
+project(':ALibKit_Jetbrains').projectDir = new File("D:\\WorkSpace\\GitHub\\ALibKit_Jetbrains")
+include ':ALibKit_Jetbrains:kotlin_stdlib'
+include ':ALibKit_Jetbrains:kotlinx_coroutines'
+//ALibKit_Jetpack
+include ':ALibKit_Jetpack'
+project(':ALibKit_Jetpack').projectDir = new File("D:\\WorkSpace\\GitHub\\ALibKit_Jetpack")
+include ':ALibKit_Jetpack:core'
+include ':ALibKit_Jetpack:databinding'
+include ':ALibKit_Jetpack:annotation'
+//ASwiftKit
+include ':ASwiftKit'
+project(':ASwiftKit').projectDir = new File("D:\\WorkSpace\\GitHub\\ASwiftKit")
+include ':ASwiftKit:basick'
+include ':ASwiftKit:bindk'
 //KUtilKit
 include ':KUtilKit'
 project(':KUtilKit').projectDir = new File("D:\\WorkSpace\\GitHub\\KUtilKit")
-include ':KUtilKit:utilk_android'
-include ':KUtilKit:utilk_kotlin'
-include ':lottie'
+include ':KUtilKit:android'
+include ':KUtilKit:kotlin'
